# pymol-agent-bridge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
skills/bridge-basics/: SKILL.md
skills/pymol/: SKILL.md
skills/setup/: SKILL.md
src/pymol_agent_bridge/: __init__.py  cli.py  connection.py  plugin.py  protocol.py  session.py
tests/: conftest.py  test_session.py
tests/integration/: conftest.py  test_bridge.py  test_session.py
tests/unit/: conftest.py  test_cli_commands.py  test_cli_setup.py  test_config.py  test_connection_edges.py  test_discovery.py  test_execute_behavior.py  test_init.py  test_protocol.py
