[project]
name = "pymol-agent-bridge"
version = "0.1.0"
description = "Lightweight bridge connecting coding agents to PyMOL via TCP socket"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
keywords = ["pymol", "molecular-visualization", "agent", "bridge", "structural-biology"]
authors = [{ name = "Alex Naka", email = "alex.naka@gmail.com" }]

[project.scripts]
pymol-agent-bridge = "pymol_agent_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymol_agent_bridge"]

[tool.hatch.build.targets.sdist]
include = ["src/pymol_agent_bridge", "tests", "skills", "README.md", "LICENSE"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["src"]

[dependency-groups]
dev = ["pyright>=1.1.400", "pytest>=8.3.4", "ruff>=0.9.7"]
