[project]
name = "pymol-agent-bridge"
version = "1.0.0"
description = "Lightweight bridge connecting coding agents to PyMOL via TCP socket"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
keywords = ["pymol", "molecular-visualization", "agent", "bridge", "structural-biology"]
authors = [{ name = "Alex Naka", email = "alex.naka@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/ANaka/pymol-agent-bridge"
Repository = "https://github.com/ANaka/pymol-agent-bridge"
Issues = "https://github.com/ANaka/pymol-agent-bridge/issues"

[project.scripts]
pymol-agent-bridge = "pymol_agent_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymol_agent_bridge"]

[tool.hatch.build.targets.sdist]
include = ["src/pymol_agent_bridge", "tests", "skills", "README.md", "LICENSE"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["src"]
exclude = ["src/pymol_agent_bridge/plugin.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a running PyMOL instance"]

[dependency-groups]
dev = ["pyright>=1.1.400", "pytest>=8.3.4", "ruff>=0.9.7"]
